# GCloud-Chess-Engine

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  foss_engines.yml  tasks.json  vcpkg.json
.github/workflows/: cmake-single-platform.yml  release.yml
config/: config.cpp  config.h  main.cpp
engine/: configuration.cpp  configuration.h  engine.cpp  engine.h  main.cpp
shared/: file.cpp  gcloud.cpp  os_specific.cpp  shared.h  ssh.cpp
test/: run_simtest.bat  run_unittest.bat
test/simulator/: gcloud_config.yml
test/simulator/simtest_engine/: engine.yml  engine_test.cpp
test/unit/: test.cpp
